[project]
name = "spotify-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.26.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[build-system]
# TODO is this the correct version constraint?
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "spotify_async"
module-root = ""